--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -40,7 +40,7 @@ a {
   transition: all 0.4s ease;
 }
 a:hover {
-  color: #00aeff !important;
+  color: #ffc200 !important;
 }
 
 .navbar-brand .uil {
@@ -92,14 +92,14 @@ b, strong {
   transition: all 0.4s ease;
 }
 .custom-btn:hover {
-  color: #00ffd5;
+  color: #ffc200;
 }
 .custom-btn.custom-btn-bg {
   background: #474559;
   color: #ffffff;
 }
 .custom-btn.custom-btn-bg:hover {
-  background: #00ccff;
+  background: #ffc200;
   color: #ffffff !important;
 }
 
@@ -116,7 +116,7 @@ b, strong {
 }
 
 .animated-item {
-  color: #00a6ff;
+  color: #ffc200;
 }
 
 .animated-item {
@@ -214,7 +214,7 @@ b, strong {
 
 .navbar-light .navbar-nav .nav-link:focus,
 .navbar-light .navbar-nav .nav-link:hover {
-  color: #00eeff;
+  color: #ffc200;
   font-weight: bold;
 }
 .navbar-light .navbar-nav .nav-link:focus span,
@@ -296,7 +296,7 @@ b, strong {
   color: rgba(255, 255, 255, 0.8);
 }
 .dark-mode .navbar-light .navbar-nav .nav-link:hover {
-  color: #0077ff;
+  color: #ffc200;
 }
 .dark-mode .navbar[class*="headroom--not-top"] {
   background: #0c0c0d;
@@ -327,7 +327,7 @@ b, strong {
 }
 .timeline-wrapper:before {
   content: "";
-  background: #47455900;
+  background: #474559;
   width: 3px;
   height: 100%;
   position: absolute;
@@ -335,7 +335,7 @@ b, strong {
 }
 
 .timeline-yr {
-  background: #47455904;
+  background: #474559;
   border-radius: 100%;
   position: absolute;
   width: 75px;
@@ -398,7 +398,7 @@ b, strong {
   font-size: inherit;
 }
 .owl-theme .owl-nav [class*=owl-]:hover {
-  color: #00bbff;
+  color: #ffc200;
 }
 .owl-theme .owl-dots .owl-dot {
   outline: none;
@@ -430,10 +430,10 @@ b, strong {
   height: 48px;
 }
 .contact-form .form-control:hover, .contact-form .form-control:focus {
-  border-color: #00c8ff;
+  border-color: #ffc200;
 }
 .contact-form .submit-btn {
-  background: #00c3ff;
+  background: #ffc200;
   border-radius: 50px;
   color: #ffffff;
   font-weight: bold;
@@ -462,7 +462,7 @@ b, strong {
   margin: 5px 0;
 }
 .social-links .uil:hover {
-  color: #009dff;
+  color: #ffc200;
 }
 
 @media (min-width: 1270px) {
